--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,8 @@ include_directories(${PROJECT_SOURCE_DIR}/include)
 # Source files
 set(SOURCES
         main.cpp
-        src/Resource.cpp)
+        src/Resource.cpp
+        src/Executable.cpp)
 
 # Executable target
 add_executable(oopsample ${SOURCES})
